# QuantAgent

./: .gitignore  CLAUDE.md  README.md  agent_state.py  agent_utils.py  decision_agent.py  indicator_agent.py  main.py  pattern_agent.py  pyproject.toml  static_util.py  trend_agent.py  web_interface.py
data/: custom_assets.json
templates/: demo_new.html  output.html
