[project]
name = "quantagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.0",
    "flask>=3.1.3",
    "ipython>=8.39.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langchain-qwq>=0.3.4",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.6",
    "openai>=2.31.0",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "scipy>=1.15.3",
    "ta-lib>=0.6.8",
    "yfinance>=1.2.1",
]
